# minfer

./: .$muinfer.drawio.bkp  .gitignore  CMakeLists.txt  muinfer.drawio  readme.md
code_test/: readme.md
code_test/test0/: mat.h  mat_expr.cpp  mat_test.cpp
code_test/test1/: gguf_reader.py
doc_exp/: llama_params.md  readme.md
include/: minfer.h
include/minfer/: basic_op.h  define.h  layer.h  mat.h  minfer.h  net.h  op.h  system.h  tensor.h  utils.h
src/backend/cpu/: CMakeLists.txt  backend_cpu.cpp  backend_cpu.h
src/backend/cpu/layer/: add_layer.cpp  add_layer.h  attention.cpp  attention.h  attention_layer.cpp  attention_layer.h  common_layer.h  embeding_layer.cpp  embeding_layer.h  feed_forward.cpp  feed_forward.h  input_layer.cpp  input_layer.h  linear_layer.cpp  linear_layer.h  output_layer.cpp  output_layer.h  rms_norm_layer.cpp  rms_norm_layer.h
src/core/: allocator.cpp  allocator.h  autobuffer.h  backend.cpp  backend.h  basic_op.cpp  define.impl.h  layer.cpp  mat.cpp  mat_convert.cpp  mat_expr.cpp  mat_gemm.cpp  mat_load.cpp  memory_utils.cpp  memory_utils.h  net.cpp  net.impl.cpp  net.impl.h  non_copyable.h  runtime.cpp  runtime.h  subnet.cpp  subnet.h  system.cpp  tensor.cpp  tensor_utils.cpp  tensor_utils.h  utils.cpp
src/core/gguf_model/: ggml_quant.cpp  ggml_quant.h  gguf_loader.cpp  gguf_loader.h  gguf_utils.cpp  gguf_utils.h  gguf_vocab.cpp  gguf_vocab.h
test/: CMakeLists.txt  test_main.cpp  test_test.cpp
test/big_models/: readme.txt
test/core/: allocator_test.cpp  mat_test.cpp  net_test.cpp  system_test.cpp  tensor_test.cpp
test/core/test_data/: data_generater.py
test/core/test_data/data/: trans_3d_1_o.npy
test/layers/: attention.cpp  attention_test.cpp  feedforward.cpp  feedforward_test.cpp  linear_test.cpp  rms_norm_test.cpp  word_embeding_test.cpp
test/layers/test_data/: layer_data_generater.py  npy_header_checker.py  test_llama_cpp_tokenizer.py
test/layers/test_data/data/: atten_input.npy  atten_output.npy  atten_params_0.npy  atten_params_1.npy  atten_params_2.npy  atten_params_3.npy  atten_rms_params.npy  ffn_input.npy  ffn_output.npy  ffn_params_0.npy  ffn_params_1.npy  ffn_params_2.npy  ffn_rms_params.npy  linear_input.npy  linear_output.npy  linear_params_0.npy  linear_params_1.npy  rms_norm_input.npy  rms_norm_output.npy  rms_norm_params.npy  word_emb_input.npy  word_emb_output.npy  word_emb_params_0.npy
test/nets/: net_test.cpp
test/opencv_lab/: mat_test.cpp
test/opencv_lab/mat_test/: mat.cpp  mat.h  mat.inl.h  mat_expr.cpp  mat_test.inl.h  operations.cpp  operations.h
