cmake_minimum_required(VERSION 3.10)

# Versioning stuff
file(STRINGS "${CMAKE_CURRENT_LIST_DIR}/include/minfer/define.h" M_DEFINE)
string(REGEX MATCH "M_VERSION_MAJOR [0-9]+" M_VERSION_MAJOR_DEFINE ${M_DEFINE})
string(REGEX MATCH "[0-9]+" M_VERSION_MAJOR ${M_VERSION_MAJOR_DEFINE})
string(REGEX MATCH "M_VERSION_MINOR [0-9]+" M_VERSION_MINOR_DEFINE ${M_DEFINE})
string(REGEX MATCH "[0-9]+" M_VERSION_MINOR ${M_VERSION_MINOR_DEFINE})
string(REGEX MATCH "M_VERSION_PATCH [0-9]+" M_VERSION_PATCH_DEFINE ${M_DEFINE})
string(REGEX MATCH "[0-9]+" M_VERSION_PATCH ${M_VERSION_PATCH_DEFINE})
set(M_VERSION ${M_VERSION_MAJOR}.${M_VERSION_MINOR}.${M_VERSION_PATCH})


project(minfer VERSION ${MINFER_VERSION} LANGUAGES C CXX ASM)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_LIST_DIR}/cmake"
)

include_directories(
        ${CMAKE_CURRENT_LIST_DIR}/include/
        ${CMAKE_CURRENT_LIST_DIR}/src/
        ${CMAKE_CURRENT_LIST_DIR}/tools/
        ${CMAKE_CURRENT_LIST_DIR}/3rdparty/
)

FILE(GLOB MCore_SRC ${CMAKE_CURRENT_LIST_DIR}/src/core/*)
add_library(MCore OBJECT ${MU_Core_SRC})
list(APPEND M_OBJECTS_TO_LINK $<TARGET_OBJECTS:MCore>)
list(APPEND M_TARGETS MCore)


include(test/CMakeLists.txt)